--- a/DAC/DAC/GoogleService-Info.plist
+++ b/DAC/DAC/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>851135691610-ndltc4jgq70slk3l3jcsh57fpvqes6dh.apps.googleusercontent.com</string>
+	<string>284406073133-nfpm0he4mm2oklh22mgn8t56jg33plhf.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.851135691610-ndltc4jgq70slk3l3jcsh57fpvqes6dh</string>
+	<string>com.googleusercontent.apps.284406073133-nfpm0he4mm2oklh22mgn8t56jg33plhf</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA4jYMEPHqOVXLcxhjOJZej2LP54j7oOqM</string>
+	<string>AIzaSyDOSxtsMZMO2TmMsvZ863Jbka1Wb16h0Pg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>851135691610</string>
+	<string>284406073133</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>nl.volleybaldedemsvaart</string>
 	<key>PROJECT_ID</key>
-	<string>dac-51bd0</string>
+	<string>volleybal-dac</string>
 	<key>STORAGE_BUCKET</key>
-	<string>dac-51bd0.appspot.com</string>
+	<string>volleybal-dac.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:851135691610:ios:cb0fb767a098421bbe9163</string>
+	<string>1:284406073133:ios:755f1ee8da2cf4a4a935a4</string>
 </dict>
 </plist>
